// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeContextProvider Snapshots should render with default config specified 1`] = `
<ContextProvider
  value={
    {
      "currentDensity": "compact",
      "currentDirection": "rtl",
      "currentLocale": "es",
      "currentTheme": "my theme",
      "currentThemeClassName": undefined,
      "directions": [
        "ltr",
        "rtl",
      ],
      "locales": [
        "en",
      ],
      "onUpdate": [Function],
      "themes": [
        "terra-default-theme",
      ],
    }
  }
>
  <div />
</ContextProvider>
`;

exports[`ThemeContextProvider Snapshots should render with no config 1`] = `
<ContextProvider
  value={
    {
      "currentDensity": undefined,
      "currentDirection": "ltr",
      "currentLocale": "en",
      "currentTheme": "terra-default-theme",
      "currentThemeClassName": undefined,
      "directions": [
        "ltr",
        "rtl",
      ],
      "locales": [
        "en",
      ],
      "onUpdate": [Function],
      "themes": [
        "terra-default-theme",
      ],
    }
  }
>
  <div />
</ContextProvider>
`;
